<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rect"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="24dp"
        android:layout_marginStart="16dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ava"
            app:shapeAppearanceOverlay="@style/circleImageView"
            android:layout_marginEnd="16dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:fontFamily="@font/sfpro_regular"
                android:textColor="@color/grey3"
                android:text="@string/resume"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/sfpro_medium"
                android:textColor="@color/white"
                android:text="@string/comp_name"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey2"
        android:layout_marginHorizontal="16dp"/>
    <TextView
        android:id="@+id/add_sopr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_sopr"
        android:textColor="@color/green"
        android:fontFamily="@font/sfpro_semibold"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp" />
    <EditText
        android:id="@+id/sopr"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="11dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/your_sopr"
        android:textColor="@color/white"
        android:textColorHint="@color/grey3"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        android:background="@color/black"
        android:gravity="top"
        android:visibility="gone" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/custom_blue_button"
        android:layout_marginHorizontal="15dp"
        android:text="@string/response"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/green"
        android:fontFamily="@font/sfpro_semibold"
        android:layout_marginBottom="32dp"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_button_with_sopr"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/custom_blue_button"
        android:layout_marginHorizontal="15dp"
        android:text="@string/response"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/green"
        android:fontFamily="@font/sfpro_semibold"
        android:layout_marginBottom="10dp"
        android:visibility="gone"/>
</LinearLayout>